--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Imitate WeChat</string>
 
     <string name="tab_chats">微信</string>
-    <string name="tab_chats_weather">微信天气：{0}度</string>
+    <string name="tab_chats_weather">当前温度：{0}度</string>
     <string name="tab_contacts">通讯录</string>
     <string name="tab_discover">发现</string>
     <string name="tab_me">下线</string>
